fixed textarea overflow on emailme page

--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -33,3 +33,9 @@ body {
   color: darken(lightsteelblue, 20%);
 }
 
+form {
+    input, textarea {
+        max-width: 100%;
+    }
+}
+
